# subcon

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  README.zh-CN.md  build.rs  zensical.toml
.github/workflows/: docker.yml  docs.yml  release.yml
docs/: changelog.md  index.md
docs/configuration/: general-settings.md  index.md  proxy-group.md  proxy.md  rule.md
docs/get-started/: docker.md  index.md  installation.md  troubleshooting.md
example/: docker-compose.yaml
example/conf/: pref.toml
example/conf/base/: clash.yml  surge.cfg
example/conf/profiles/: example.yaml
example/conf/rules/: direct.list  proxy.list
example/conf/snippets/: groups.toml  rulesets.toml
packaging/: subcon.service
schema/: common.yaml  http.yaml  hysteria2.yaml  shadowsocks.yaml  socks5.yaml  tls.yaml  trojan.yaml  vless.yaml  vmess.yaml  wireguard.yaml
schema/include/: common.yaml  tls.yaml
src/: config.rs  logging.rs  main.rs  paths.rs  server.rs
src/export/: clash.rs  mod.rs  surge.rs
src/groups/: mod.rs
src/network/: cache.rs  mod.rs  security.rs
src/parser/: clash.rs  mod.rs
src/proxy/: mod.rs
src/rules/: mod.rs
src/schema/: mod.rs  shadowsocks.rs  trojan.rs
src/server/: api.rs  clash.rs  mod.rs  surge.rs  util.rs  web.rs
src/web/: package.json  pnpm-lock.yaml
src/web/app/: globals.css  layout.tsx  page.tsx
src/web/app/subscription/: page.tsx
src/web/components/: code-editor.tsx  theme-toggle.tsx
src/web/components/studio/: api.ts  cache-panel.tsx  config-panel.tsx  confirm-dialog.tsx  control-panel.tsx  groups-panel.tsx  login-screen.tsx  oobe-screen.tsx  profiles-panel.tsx  rules-panel.tsx  schema-panel.tsx  subscription-panel.tsx  types.ts  utils.ts
src/web/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  popover.tsx  switch.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
