[package]
name = "subcon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde-saphyr = "0.0.11"
serde_json = { version = "1.0.145", features = ["preserve_order"] }
toml = "0.9.10"
fancy-regex = "0.17.0"
axum = { version = "0.8.7", features = ["macros"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
tower-http = { version = "0.6.8", features = ["trace"] }
clap = { version = "4.5.53", features = ["derive"] }
