[package]
name = "subcon"
version = "0.3.0"
edition = "2024"
description = "Subscription converter server for Clash and Surge configs"
license = "MIT"
authors = ["YooLc"]

[dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde-saphyr = "0.0.11"
serde_json = { version = "1.0.145", features = ["preserve_order"] }
toml = "0.9.10"
fancy-regex = "0.17.0"
axum = { version = "0.8.7", features = ["macros"] }
tokio = { version = "1.48.0", features = ["fs", "macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
tower-http = { version = "0.6.8", features = ["trace"] }
clap = { version = "4.5.53", features = ["derive"] }
reqwest = { version = "0.12.15", default-features = false, features = [
  "gzip",
  "rustls-tls",
] }
sha2 = "0.10.9"
include_dir = "0.7.4"
mime_guess = "2.0.5"

[package.metadata.deb]
maintainer = "YooLc"
copyright = "© YooLc"
assets = [
  "$auto",
  [
    "example/conf/pref.toml",
    "etc/subcon/conf/pref.toml",
    "644",
  ],
  [
    "example/conf/base/*",
    "etc/subcon/conf/base",
    "644",
  ],
  [
    "example/conf/profiles/*",
    "etc/subcon/conf/profiles",
    "644",
  ],
  [
    "example/conf/rules/*",
    "etc/subcon/conf/rules",
    "644",
  ],
  [
    "example/conf/snippets/*",
    "etc/subcon/conf/snippets",
    "644",
  ],
  [
    "schema/*.yaml",
    "etc/subcon/schema",
    "644",
  ],
  [
    "schema/include/*",
    "etc/subcon/schema/include",
    "644",
  ],
]
